src/styles.css
.header {
    padding: 25px;
    box-shadow: 0 1px 10px rgba(0,0,0,.09);
    position: static;
    font-family: sans-serif;
}

.f-r-jsb-a {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.subheader {
    font-size: 25px;
    font-weight: 700;
}

.subheader-1 {
    font-size: 20px;
    font-weight: 400;
    color: rgb(94, 93, 92);
    font-family:  sans-serif;
}

.subheader-2 {
    font-size: 18px;
    font-weight: 600;
}

.cursor-pointer {
    cursor: pointer;
}

.photo {
   /* border-radius: 50%; */
   animation: mymove 3s;
   animation-iteration-count: infinite;
   height: 300px;
   width: 300px; 
   border:3px solid black;
   border-radius: 50%;
   
}
@keyframes mymove {
    0%, 100% {
        margin-top: 0;
      }
      50% {
        margin-top:30px;
        border-top-right-radius: 40%;
        border-bottom-left-radius: 40%;
        border-bottom-right-radius: 40%;
        border-top-left-radius: 40%;

      }
  }

.iconstyle {
    font-size: 30px;
    cursor: pointer;
}

.techCard {
    box-shadow: 0.5px 1px 5px 0.25px grey;
    padding: 10px;
    border-radius: 5px;
    font-size: 15px;
    font-weight: 600;
    min-width: 35px;
    text-align: center;
}

.hoverbutton:hover {
    transition: 0.3s;
    color: blue;
}

.hoverbutton-1:hover {
    color: #DAA520;
    transition: 0.4s;
}

.hidephoto {
    width: 50%;
    align-items: center;
    justify-content: center;
    display: flex;
}

.mainCardCss {
    width: 100%; 
        display: flex; 
        flex-direction: column;
        align-items: center; 
        /* background-color: #F8F8F8;  */
        min-height:  70vh;  
        /* padding-bottom: 10px; */
    }

.subMain {
    width: 30%;
    margin-left: 15%;
    color: white;
}

.aboutMe {
    width: 60%;
    height: 350px; 
    display: flex;
    flex-direction: column;
    align-items: center;}

.projectDisc {
    width: 50%
}

@media screen and (max-width: 900px) {
    #hide {display: none;}
    #hidephotoId {display: none;}
    #subMainHide {width: 80%; margin-left: 10%}
    #aboutImg {display: none;}
    #aboutMeId {  width: 100%; margin-left: -10%;height: 350px; text-overflow:hidden;}
    #projectPage {display: none;}
    #projectDiscId { width: 100%;}
    #footerId {display: none;}
    #techStack {display: none;}
    /* #aboutMeMain {width: 100%;} */

  }

  .topPhoto{
    /* width: 50%; */
    align-items: center;
    justify-content: center;
    display:"flex";
  }

  @media screen and (min-width: 901px) {
    #topPhotoHide {display: none;}
    #maincard {flex-direction: row; }
    #aboutMeMain {width: 73%;padding:"20px"}
    #hidenButton {display: none;}
    /* #aboutMeText {text-align: left;} */


}

.Live {
    /* border-radius: 50%; */
    animation: myLive 1.5s;
    animation-iteration-count: infinite;
    
 }
 @keyframes myLive {
     0%, 100% {
         opacity: 1;
       }
       50% {
     opacity: 0;
 
       }
   }

